syntax = "proto3";

package pb;

import "fav_movies.proto";

option go_package = "github.com/CineDeepMatch/Backend-server/pb";

message GetFavMoviesRequest {
    string user_id = 1;
}

message GetFavMoviesResponse {
    FavMovies fav_movies = 1;
}

